[gd_scene load_steps=3 format=3 uid="uid://duwra1wfbgffu"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_f3p4r"]
[ext_resource type="PackedScene" uid="uid://pfpbnocbwi1p" path="res://scenes/option_menu.tscn" id="2_t6brx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f3p4r")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -48.0
offset_right = 170.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="Menu"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_t6brx")]
visible = false
layout_mode = 0

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
